--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -54,7 +54,8 @@
 				{
 					<input type="hidden" name="slideId" value="@Model.Slide.Id" />
 					<input type="hidden" name="courseId" value="@Model.CourseId" />
-					<button class="btn btn-danger" type="submit">Удалить прогресс</button>
+					<button class="btn btn-danger" type="submit">Удалить мой прогресс</button>
+					<span class="text-danger">(для тестеров и преподавателей)</span>
 				}
 			}
 			@if (!Model.IsGuest)
