--- a/src/uLearn.Web/Views/Exercise/SubmissionsPanel.cshtml
+++ b/src/uLearn.Web/Views/Exercise/SubmissionsPanel.cshtml
@@ -20,20 +20,40 @@
 		var disabledButtonClasses = "btn btn-xs btn-default";
 
 		var currentSubmissionIndex = Model.Submissions.FindIndex(s => s.Id == Model.CurrentSubmissionId);
-		if (currentSubmissionIndex > 0)
-		{
-			var previousSubmission = Model.Submissions[currentSubmissionIndex - 1];
-			@Html.RouteLink("← Предыдущая версия", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = previousSubmission.Id }, new { @class = buttonClasses, data_version_id = previousSubmission.Id })
-		}
-		else if (currentSubmissionIndex == 0)
-		{
-			@Html.RouteLink("← Предыдущая версия", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = Model.CurrentSubmissionId }, new { @class = disabledButtonClasses, disabled = "disabled" })
-		}
-		else
-		{
-			@Html.RouteLink("← Предыдущая версия", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = Model.Submissions[Model.Submissions.Count - 1].Id }, new { @class = buttonClasses, data_version_id = Model.Submissions[Model.Submissions.Count - 1].Id })
-		}
 
+		<div class="btn-group">
+			@* Previous version link *@
+			@if (currentSubmissionIndex > 0)
+			{
+				var previousSubmission = Model.Submissions[currentSubmissionIndex - 1];
+				@Html.RouteLink("← Предыдущая версия", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = previousSubmission.Id }, new { @class = buttonClasses, data_version_id = previousSubmission.Id })
+			}
+			else if (currentSubmissionIndex == 0)
+			{
+				@Html.RouteLink("← Предыдущая версия", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = Model.CurrentSubmissionId }, new { @class = disabledButtonClasses, disabled = "disabled" })
+			}
+			else
+			{
+				@Html.RouteLink("← Предыдущая версия", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = Model.Submissions[Model.Submissions.Count - 1].Id }, new { @class = buttonClasses, data_version_id = Model.Submissions[Model.Submissions.Count - 1].Id })
+			}
+
+			@* Next version link *@
+			@if (currentSubmissionIndex >= 0 && currentSubmissionIndex < Model.Submissions.Count - 1)
+			{
+				var nextSubmission = Model.Submissions[currentSubmissionIndex + 1];
+				@Html.RouteLink("Следующая версия →", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = nextSubmission.Id }, new { @class = buttonClasses, data_version_id = nextSubmission.Id })
+			}
+			else if (currentSubmissionIndex >= 0 && Model.CanTryAgain)
+			{
+				@Html.RouteLink("Сдать ещё раз »", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = -1 }, new { @class = buttonClasses, data_version_id = -1 })
+			}
+			else
+			{
+				@Html.RouteLink("Следующая версия →", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url }, new { @class = disabledButtonClasses, disabled = "disabled" })
+			}
+		</div>
+
+		/* Version selector */
 		var listItems = Model.Submissions.Select(s => new SelectListItem
 		{
 			Text = s.Timestamp.ToPrettyString() + GetSubmissionDescription(s),
@@ -50,20 +70,5 @@
 		{
 			@Html.DropDownList("version", listItems, new { @class = "inline-select select-auto-width" })
 		}
-
-		if (currentSubmissionIndex >= 0 && currentSubmissionIndex < Model.Submissions.Count - 1)
-		{
-			var nextSubmission = Model.Submissions[currentSubmissionIndex + 1];
-			@Html.RouteLink("Следующая версия →", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = nextSubmission.Id }, new { @class = buttonClasses, data_version_id = nextSubmission.Id })
-		}
-		else if (currentSubmissionIndex >= 0 && Model.CanTryAgain)
-		{
-			@Html.RouteLink("Сдать ещё раз »", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, version = -1 }, new { @class = buttonClasses, data_version_id = -1 })
-		}
-		else
-		{
-			@Html.RouteLink("Следующая версия →", "Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url }, new { @class = disabledButtonClasses, disabled = "disabled" })
-		}
-
 	}
 </div>
