--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -541,7 +541,7 @@
 			</button>
 			if (!model.IsLti && !model.HideShowSolutionsButton)
 			{
-				<button type="button" class="btn btn-default giveup-btn" onclick="@(model.AcceptedSolutionsAction)">
+				<button type="button" class="btn btn-default giveup-btn no-rounds" onclick="@(model.AcceptedSolutionsAction)">
 					Показать решения
 				</button>
 			}
