Show only top 50 items in manual checking queue

--- a/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
@@ -125,4 +125,9 @@
 			</div>
 		</div>
 	}
+
+	@if (Model.ExistsMore)
+	{
+		<div class="alert alert-info">Показаны последние 50 работ</div>
+	}
 </div>
