--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -73,4 +73,9 @@
 			<hr/>
 		</div>
 	}
+
+	@if (Model.ExistsMore)
+	{
+		<div class="alert alert-info">Показаны последние 50 работ</div>
+	}
 </div>
