small ui improvements:  * comment author is link to show user solutions or user course statistics  * link to user course statistics from show user solutions page  * fix accepted exercise output rendering

--- a/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
@@ -11,6 +11,9 @@
 			@Html.ActionLink(Model.Slide.Title, "Slide", "Course", new { courseId = Model.Course.Id, slideIndex = Model.Slide.Index }, null)
 		</small>
 	</h2>
+	<p>
+		@Html.ActionLink("статистика пользователя по курсу", "CourseInfo", "Account", new { userName = Model.User.Id, courseId = Model.Course.Id }, null)
+	</p>
 	@foreach (var userSolution in Model.Solutions)
 	{
 		var code = new CodeBlock(userSolution.SolutionCode.Text, Model.Slide.Exercise.LangId);
