Add steroids to analytics dashboard

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1224,16 +1224,16 @@ table.analytics__user-answers {
 	margin-right: 10px;
 }
 
-.analytics__chart__toggles .analytics__chart__toggle.selected {
+.analytics__chart__toggles .analytics__chart__toggle.active {
 	pointer-events: none;
 	color: black;
 	font-weight: bold;
 	text-decoration: none;
 }
 
-.analytics__chart__toggles .analytics__chart__toggle.selected:hover,
-.analytics__chart__toggles .analytics__chart__toggle.selected:focus,
-.analytics__chart__toggles .analytics__chart__toggle.selected:active {
+.analytics__chart__toggles .analytics__chart__toggle.active:hover,
+.analytics__chart__toggles .analytics__chart__toggle.active:focus,
+.analytics__chart__toggles .analytics__chart__toggle.active:active {
 	text-decoration: none;
 }
 
